<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:orientation="vertical"
    tools:context=".DashBoard">

    <!--Top Navbar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="@dimen/back_width"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_baseline_menu_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/app_name"
                android:fontFamily="@font/aclonica"
                android:padding="12dp"
                android:textSize="23dp" />
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <LinearLayout
            android:paddingTop="@dimen/back_width"
            android:paddingBottom="@dimen/back_width"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/background_padding"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/card_padding"
                    android:layout_marginTop="@dimen/card_padding"
                    android:layout_marginEnd="@dimen/card_padding"
                    android:layout_marginBottom="@dimen/card_padding"
                    android:layout_weight="0.5"
                    android:background="@drawable/backgroundop3flip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:padding="@dimen/card_padding"
                        android:text="@string/lookingForWorker"
                        android:textColor="@color/title2"
                        android:textSize="20sp" />

                    <Button

                        android:layout_width="@dimen/button_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/card_padding"
                        android:text="@string/Enter"
                        android:textColor="@color/title2" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="70dp"
                    android:src="@drawable/hirew" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/card_padding"
                    android:layout_marginTop="@dimen/card_padding"
                    android:layout_marginEnd="@dimen/card_padding"
                    android:layout_marginBottom="@dimen/card_padding"
                    android:layout_weight="0.5"
                    android:background="@drawable/backgroundop3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:padding="@dimen/card_padding"
                        android:text="@string/Vacancies"
                        android:textAlignment="textEnd"
                        android:textColor="@color/title2"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btnVacancy"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:background="@android:color/transparent"
                        android:onClick="onClick"
                        android:padding="@dimen/card_padding"
                        android:text="@string/Enter"
                        android:textColor="@color/title2" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="70dp"
                    android:src="@drawable/vacancymenu" />


            </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/card_padding"
                    android:layout_marginTop="@dimen/card_padding"
                    android:layout_marginEnd="@dimen/card_padding"
                    android:layout_marginBottom="@dimen/card_padding"
                    android:layout_weight="0.5"
                    android:background="@drawable/backgroundop3flip">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:padding="@dimen/card_padding"
                        android:text="@string/BeWork"
                        android:textColor="@color/title2"
                        android:textSize="20sp" />

                    <Button

                        android:layout_width="@dimen/button_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/card_padding"
                        android:text="@string/Enter"
                        android:textColor="@color/title2" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="60dp"
                    android:src="@drawable/bew" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/card_padding"
                    android:layout_marginTop="@dimen/card_padding"
                    android:layout_marginEnd="@dimen/card_padding"
                    android:layout_marginBottom="@dimen/card_padding"
                    android:layout_weight="0.5"
                    android:background="@drawable/backgroundop3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:padding="@dimen/card_padding"
                        android:text="@string/Feedback"
                        android:textAlignment="textEnd"
                        android:textColor="@color/title"
                        android:textSize="20sp" />

                    <Button

                        android:layout_width="@dimen/button_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/card_padding"
                        android:text="@string/Enter"
                        android:textColor="@color/title2" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="70dp"
                    android:src="@drawable/feedback" />


            </RelativeLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <!--Bottom Navbar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/home" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/notification" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/profile" />
        </RelativeLayout>

    </LinearLayout>



</LinearLayout>